# cmake-freertos-demo

./: .gitignore  CMakeLists.txt  README.md  fetch_presets.cmake  main.c
.github/workflows/: build.yml
source/: CMakeLists.txt  main.c
